--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+/* 
+  GENERAL CONFIGS
+*/
+
 *,
 *::before,
 *::after {
@@ -15,11 +19,16 @@
   --hover-state-color: hsl(245, 83%, 68%);
 }
 
+/* 
+  MAIN STYLES
+*/
+
 body {
   font-family: "Red Hat Display", sans-serif;
   margin: 0;
   display: grid;
   place-items: center;
+  justify-content: center;
   align-content: center;
   gap: 2rem;
   min-height: 100vh;
@@ -29,7 +38,7 @@ body {
 
 .card {
   background: white;
-  width: min(70%, 28rem);
+  width: min(90%, 28rem);
   padding: 3rem;
   border-radius: 1em;
 }
@@ -48,8 +57,7 @@ body {
 
 
 .card__image {
-  overflow: hidden;
-  min-width: 100%;
+  width: calc(100% + 6rem);
   margin-top: -3rem;
   border-radius: 1em 1em 0 0;  
 }
@@ -57,6 +65,7 @@ body {
 .card__title {
   color: var(--neutral-dark-blue);
   font-weight: 900;
+  text-align: center;
 }
 
 .card__text {
@@ -114,10 +123,11 @@ body {
   font-weight: 900;
   background: var(--primary-bright-blue);
   border: none;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   padding: 1rem 0;
   border-radius: .8em;
   transition: 200ms;
+  box-shadow: 0 .8rem 1.5rem hsla(236, 50%, 60%, 0.5);
 }
 
 .card__button-cancel {
@@ -162,4 +172,18 @@ body {
   color: var(--hover-state-color);
 }
 
+/* 
+  MEDIA QUERIES
+*/
 
+@media (max-width: 35em) {
+  html {
+    font-size: 12px;
+  }
+  
+  .attribution {
+    display: flex;
+    max-width: 90%;
+  }
+
+}
