--- a/main.css
+++ b/main.css
@@ -181,6 +181,10 @@ body {
     font-size: 12px;
   }
 
+  body {
+    height: max(100vh, 550px);
+  }
+
   .card {
     padding: 2rem;
   }
@@ -198,7 +202,7 @@ body {
 @media (max-height: 50em) and (min-width: 35em) {
   body {
     transform: scale(0.8);
-    height: max(100vh, 600px);
+    height: max(100vh, 580px);
   }
 
 }
